# GPSandbox

./: .gitignore  CMakeLists.txt  README.md  build.sh  coordinate.cpp  coordinate.h  main.cpp  motion.c  shader.cpp  visualization.cpp  visualization.h
include/: shader.h
include/glad/: glad.h
opengl/: main.cpp
raylib_test/: main.c
shaders/: shader.vs
src/: glad.c  main.cpp  shader.cpp
